[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-download"
version = "0.0.0"
description = "Demo YouTube-to-MP3 downloader (CI/CD learning repo)"
requires-python = ">=3.8"
dependencies = [
  "Flask==2.2.2",
  "moviepy==1.0.3",
  "pytube==15.0.0",
  "Werkzeug==2.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
]

[tool.setuptools]
py-modules = ["app"]
